--- a/language/de-DE/de-DE.mod_wl_typed_module.ini
+++ b/language/de-DE/de-DE.mod_wl_typed_module.ini
@@ -6,3 +6,35 @@
 
 MOD_WL_TYPED_MODULE="WL Typed Module"
 MOD_WL_TYPED_MODULE_XML_DESCRIPTION="Ein Joomla! Modul zum animieren von Wörtern und Sätzen."
+
+MOD_WL_TYPED_MODULE_ELEMENTTYPE_LABEL="Elementtyp"
+MOD_WL_TYPED_MODULE_ELEMENTTYP_DESC="Bitte wählen Sie den Typ des Inhaltselement aus."
+MOD_WL_TYPED_MODULE_ID_LABEL="Eindeutige ID"
+MOD_WL_TYPED_MODULE_ID_DESC="Bitte wählen Sie eine ID aus."
+MOD_WL_TYPED_MODULE_FONTSIZE_LABEL="Schriftgröße wählen"
+MOD_WL_TYPED_MODULE_FONTSIZE_DESC="Bitte wählen Sie eine Schriftgröße aus."
+MOD_WL_TYPED_MODULE_WORDS-1_LABEL="1.Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_WORDS-1_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_WORDS-1_DEFAULT="Beispiel 1"
+MOD_WL_TYPED_MODULE_WORDS-2_LABEL="2.Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_WORDS-2_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_WORDS-3_LABEL="3.Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_WORDS-3_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_WORDS-4_LABEL="4.Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_WORDS-4_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_WORDS-5_LABEL="5.Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_WORDS-5_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_FONTSPEED_LABEL="Geschwindingkeit"
+MOD_WL_TYPED_MODULE_FONTSPEED_DESC="Bitte legen Sie die Geschwindingkeit fest."
+MOD_WL_TYPED_MODULE_TIMESTART_LABEL="Zeit bevor die Eingabe beginnt"
+MOD_WL_TYPED_MODULE_TIMESTART_DESC="Bitte legen Sie eine Zeit fest."
+MOD_WL_TYPED_MODULE_TIMEBACK_LABEL="Geschwindigkeit beim Rücklauf"
+MOD_WL_TYPED_MODULE_TIMEBACK_DESC="Bitte legen Sie die Geschwindingkeit fest."
+MOD_WL_TYPED_MODULE_LOOP_LABEL="Ausgabe wiederholen"
+MOD_WL_TYPED_MODULE_LOOP_DESC="Aktivieren Sie die Checkbox für eine Wiederholung."
+MOD_WL_TYPED_MODULE_LOOPCOUNT_LABEL="Anzahl der Wiederholungen"
+MOD_WL_TYPED_MODULE_LOOPCOUNT_DESC="Bitte legen Sie die Anzahl der Wiederholungen fest."
+MOD_WL_TYPED_MODULE_CURSOR_LABEL="Cursor ausblenden"
+MOD_WL_TYPED_MODULE_CURSOR_DESC="Soll der Cursor ausgebelndet werden."
+
+MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Bitte mindestens 2 Schlagwörter festlegen</p>"
