--- a/language/de-DE/de-DE.mod_wl_typed_module.ini
+++ b/language/de-DE/de-DE.mod_wl_typed_module.ini
@@ -4,7 +4,7 @@
 ; @copyright  Copyright (C) 2011 - 2019
 ; @license    http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
 
-MOD_WL_TYPED_MODULE="WL Typed Module"
+MODULE="WL Typed Module"
 MOD_WL_TYPED_MODULE_XML_DESCRIPTION="Ein Joomla! Modul zum animieren von Wörtern und Sätzen."
 
 MOD_WL_TYPED_MODULE_ELEMENTTYPE_LABEL="Elementtyp"
@@ -13,17 +13,8 @@ MOD_WL_TYPED_MODULE_ID_LABEL="Eindeutige ID"
 MOD_WL_TYPED_MODULE_ID_DESC="Bitte wählen Sie eine ID aus."
 MOD_WL_TYPED_MODULE_FONTSIZE_LABEL="Schriftgröße wählen"
 MOD_WL_TYPED_MODULE_FONTSIZE_DESC="Bitte wählen Sie eine Schriftgröße aus."
-MOD_WL_TYPED_MODULE_WORDS-1_LABEL="1.Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_WORDS-1_DESC="Bitte legen Sie ihre Schlagwörter an."
-MOD_WL_TYPED_MODULE_WORDS-1_DEFAULT="Beispiel 1"
-MOD_WL_TYPED_MODULE_WORDS-2_LABEL="2.Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_WORDS-2_DESC="Bitte legen Sie ihre Schlagwörter an."
-MOD_WL_TYPED_MODULE_WORDS-3_LABEL="3.Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_WORDS-3_DESC="Bitte legen Sie ihre Schlagwörter an."
-MOD_WL_TYPED_MODULE_WORDS-4_LABEL="4.Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_WORDS-4_DESC="Bitte legen Sie ihre Schlagwörter an."
-MOD_WL_TYPED_MODULE_WORDS-5_LABEL="5.Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_WORDS-5_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_WORDS_LABEL="Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_WORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
 MOD_WL_TYPED_MODULE_FONTSPEED_LABEL="Geschwindingkeit"
 MOD_WL_TYPED_MODULE_FONTSPEED_DESC="Bitte legen Sie die Geschwindingkeit fest."
 MOD_WL_TYPED_MODULE_TIMESTART_LABEL="Zeit bevor die Eingabe beginnt"
