String parameters set

--- a/language/de-DE/de-DE.mod_wl_typed_module.ini
+++ b/language/de-DE/de-DE.mod_wl_typed_module.ini
@@ -13,8 +13,12 @@ MOD_WL_TYPED_MODULE_ID_LABEL="Eindeutige ID"
 MOD_WL_TYPED_MODULE_ID_DESC="Bitte wählen Sie eine ID aus."
 MOD_WL_TYPED_MODULE_FONTSIZE_LABEL="Schriftgröße wählen"
 MOD_WL_TYPED_MODULE_FONTSIZE_DESC="Bitte wählen Sie eine Schriftgröße aus."
-MOD_WL_TYPED_MODULE_WORDS_LABEL="Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_WORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_FIRSTWORDS_LABEL="Erstes Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_FIRSTWORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_SECONDWORDS_LABEL="Zweites Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_SECONDWORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_THIRDWORDS_LABEL="Drittes Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_THIRDWORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
 MOD_WL_TYPED_MODULE_FONTSPEED_LABEL="Geschwindingkeit"
 MOD_WL_TYPED_MODULE_FONTSPEED_DESC="Bitte legen Sie die Geschwindingkeit fest."
 MOD_WL_TYPED_MODULE_TIMESTART_LABEL="Zeit bevor die Eingabe beginnt"
@@ -26,6 +30,6 @@ MOD_WL_TYPED_MODULE_LOOP_DESC="Aktivieren Sie die Checkbox für eine Wiederholun
 MOD_WL_TYPED_MODULE_LOOPCOUNT_LABEL="Anzahl der Wiederholungen"
 MOD_WL_TYPED_MODULE_LOOPCOUNT_DESC="Bitte legen Sie die Anzahl der Wiederholungen fest."
 MOD_WL_TYPED_MODULE_CURSOR_LABEL="Cursor ausblenden"
-MOD_WL_TYPED_MODULE_CURSOR_DESC="Soll der Cursor ausgebelndet werden."
+MOD_WL_TYPED_MODULE_CURSOR_DESC="Soll der Cursor ausgeblendet werden."
 
 MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Bitte mindestens 2 Schlagwörter festlegen</p>"
