Add new fields and changed language files

--- a/language/de-DE/de-DE.mod_wl_typed_module.ini
+++ b/language/de-DE/de-DE.mod_wl_typed_module.ini
@@ -13,6 +13,14 @@ MOD_WL_TYPED_MODULE_ID_LABEL="Eindeutige ID"
 MOD_WL_TYPED_MODULE_ID_DESC="Bitte wählen Sie eine ID aus."
 MOD_WL_TYPED_MODULE_FONTSIZE_LABEL="Schriftgröße wählen"
 MOD_WL_TYPED_MODULE_FONTSIZE_DESC="Bitte wählen Sie eine Schriftgröße aus."
+MOD_WL_TYPED_MODULE_FONTCOLOR_LABEL="Schiftfarbe wählen"
+MOD_WL_TYPED_MODULE_FONTCOLOR_DESC="Bitte wählen Sie eine Schriftfarbe."
+MOD_WL_TYPED_MODULE_WORDCOLOR_LABEL="Schlagwortfarbe wählen."
+MOD_WL_TYPED_MODULE_WORDCOLOR_DESC="Bitte wählen Sie eine Schlagwortfarbe."
+MOD_WL_TYPED_MODULE_TEXT_LABEL="Text eingeben"
+MOD_WL_TYPED_MODULE_TEXT_DESC="Bitte geben sie etwas Text ein."
+MOD_WL_TYPED_MODULE_TEXTSIZE_LABEL="Schriftgöße wählen."
+MOD_WL_TYPED_MODULE_TEXTSIZE_DESC="Bitte wählen Sie eine Schriftgröße aus."
 MOD_WL_TYPED_MODULE_FIRSTWORDS_LABEL="Erstes Schlagwörter festlegen"
 MOD_WL_TYPED_MODULE_FIRSTWORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
 MOD_WL_TYPED_MODULE_SECONDWORDS_LABEL="Zweites Schlagwörter festlegen"
