--- a/language/en-GB/en-GB.mod_wl_typed_module.ini
+++ b/language/en-GB/en-GB.mod_wl_typed_module.ini
@@ -13,6 +13,14 @@ MOD_WL_TYPED_MODULE_ID_LABEL="Unique ID"
 MOD_WL_TYPED_MODULE_ID_DESC="Please select an ID."
 MOD_WL_TYPED_MODULE_FONTSIZE_LABEL="Select font size"
 MOD_WL_TYPED_MODULE_FONTSIZE_DESC="Please select a font size."
+MOD_WL_TYPED_MODULE_FONTCOLOR_LABEL="Set font color"
+MOD_WL_TYPED_MODULE_FONTCOLOR_DESC="Please select a font color."
+MOD_WL_TYPED_MODULE_WORDCOLOR_LABEL="Keyword color"
+MOD_WL_TYPED_MODULE_WORDCOLOR_DESC="Please select a keyword color"
+MOD_WL_TYPED_MODULE_TEXT_LABEL="Text color"
+MOD_WL_TYPED_MODULE_TEXT_DESC="Please enter some text."
+MOD_WL_TYPED_MODULE_TEXTSIZE_LABEL="Text"
+MOD_WL_TYPED_MODULE_TEXTSIZE_DESC="Please select a text size."
 MOD_WL_TYPED_MODULE_FIRSTWORDS_LABEL="Define first keywords"
 MOD_WL_TYPED_MODULE_FIRSTWORDS_DESC="Please create your keywords."
 MOD_WL_TYPED_MODULE_SECONDWORDS_LABEL="Set second keywords"
