Create new warning text

--- a/language/de-DE/de-DE.mod_wl_typed_module.ini
+++ b/language/de-DE/de-DE.mod_wl_typed_module.ini
@@ -39,5 +39,6 @@ MOD_WL_TYPED_MODULE_LOOPCOUNT_LABEL="Anzahl der Wiederholungen"
 MOD_WL_TYPED_MODULE_LOOPCOUNT_DESC="Bitte legen Sie die Anzahl der Wiederholungen fest."
 MOD_WL_TYPED_MODULE_CURSOR_LABEL="Cursor ausblenden"
 MOD_WL_TYPED_MODULE_CURSOR_DESC="Soll der Cursor ausgeblendet werden."
+MOD_WL_TYPED_MODULE_PLACEHOLDER="Bitte geben Sie mindestens 2 Schlagwörter an."
 
 MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Bitte mindestens 2 Schlagwörter festlegen</p>"
