--- a/language/en-GB/en-GB.mod_wl_typed_module.ini
+++ b/language/en-GB/en-GB.mod_wl_typed_module.ini
@@ -39,5 +39,6 @@ MOD_WL_TYPED_MODULE_LOOPCOUNT_LABEL="Number of repetitions"
 MOD_WL_TYPED_MODULE_LOOPCOUNT_DESC="Please specify the number of repetitions."
 MOD_WL_TYPED_MODULE_CURSOR_LABEL="Hide the cursor"
 MOD_WL_TYPED_MODULE_CURSOR_DESC="Should the cursor be hidden."
+MOD_WL_TYPED_MODULE_PLACEHOLDER="Please enter at least 2 keywords"
 
 MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Please define at least 2 keywords</p>"
