Create new field and changed some langauge files.

--- a/language/de-DE/de-DE.mod_wl_typed_module.ini
+++ b/language/de-DE/de-DE.mod_wl_typed_module.ini
@@ -21,12 +21,8 @@ MOD_WL_TYPED_MODULE_TEXT_LABEL="Text eingeben"
 MOD_WL_TYPED_MODULE_TEXT_DESC="Bitte geben sie etwas Text ein."
 MOD_WL_TYPED_MODULE_TEXTSIZE_LABEL="Schriftgöße wählen."
 MOD_WL_TYPED_MODULE_TEXTSIZE_DESC="Bitte wählen Sie eine Schriftgröße aus."
-MOD_WL_TYPED_MODULE_FIRSTWORDS_LABEL="Erstes Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_FIRSTWORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
-MOD_WL_TYPED_MODULE_SECONDWORDS_LABEL="Zweites Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_SECONDWORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
-MOD_WL_TYPED_MODULE_THIRDWORDS_LABEL="Drittes Schlagwörter festlegen"
-MOD_WL_TYPED_MODULE_THIRDWORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
+MOD_WL_TYPED_MODULE_WORDS_LABEL="Schlagwörter festlegen"
+MOD_WL_TYPED_MODULE_WORDS_DESC="Bitte legen Sie ihre Schlagwörter an."
 MOD_WL_TYPED_MODULE_FONTSPEED_LABEL="Geschwindingkeit"
 MOD_WL_TYPED_MODULE_FONTSPEED_DESC="Bitte legen Sie die Geschwindingkeit fest."
 MOD_WL_TYPED_MODULE_TIMESTART_LABEL="Zeit bevor die Eingabe beginnt"
@@ -39,6 +35,6 @@ MOD_WL_TYPED_MODULE_LOOPCOUNT_LABEL="Anzahl der Wiederholungen"
 MOD_WL_TYPED_MODULE_LOOPCOUNT_DESC="Bitte legen Sie die Anzahl der Wiederholungen fest."
 MOD_WL_TYPED_MODULE_CURSOR_LABEL="Cursor ausblenden"
 MOD_WL_TYPED_MODULE_CURSOR_DESC="Soll der Cursor ausgeblendet werden."
-MOD_WL_TYPED_MODULE_PLACEHOLDER="Bitte geben Sie mindestens 2 Schlagwörter an."
+MOD_WL_TYPED_MODULE_PLACEHOLDER="Bitte achten Sie auf die richtige Schreibweise der Schlagwörter."
 
-MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Bitte mindestens 2 Schlagwörter festlegen</p>"
+MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Bitte auf die richtige Schreibweise achten ( 'Videomaker','Desinger','Coder' )</p>"
