--- a/language/en-GB/en-GB.mod_wl_typed_module.ini
+++ b/language/en-GB/en-GB.mod_wl_typed_module.ini
@@ -21,12 +21,8 @@ MOD_WL_TYPED_MODULE_TEXT_LABEL="Text color"
 MOD_WL_TYPED_MODULE_TEXT_DESC="Please enter some text."
 MOD_WL_TYPED_MODULE_TEXTSIZE_LABEL="Text"
 MOD_WL_TYPED_MODULE_TEXTSIZE_DESC="Please select a text size."
-MOD_WL_TYPED_MODULE_FIRSTWORDS_LABEL="Define first keywords"
-MOD_WL_TYPED_MODULE_FIRSTWORDS_DESC="Please create your keywords."
-MOD_WL_TYPED_MODULE_SECONDWORDS_LABEL="Set second keywords"
-MOD_WL_TYPED_MODULE_SECONDWORDS_DESC="Please create your keywords."
-MOD_WL_TYPED_MODULE_THIRDWORDS_LABEL="Set third keywords"
-MOD_WL_TYPED_MODULE_THIRDWORDS_DESC="Please create your keywords."
+MOD_WL_TYPED_MODULE_WORDS_LABEL="Define your keywords"
+MOD_WL_TYPED_MODULE_WORDS_DESC="Please create your keywords."
 MOD_WL_TYPED_MODULE_FONTSPEED_LABEL="Speed"
 MOD_WL_TYPED_MODULE_FONTSPEED_DESC="Please set the speed."
 MOD_WL_TYPED_MODULE_TIMESTART_LABEL="Time before the entry begins."
@@ -39,6 +35,6 @@ MOD_WL_TYPED_MODULE_LOOPCOUNT_LABEL="Number of repetitions"
 MOD_WL_TYPED_MODULE_LOOPCOUNT_DESC="Please specify the number of repetitions."
 MOD_WL_TYPED_MODULE_CURSOR_LABEL="Hide the cursor"
 MOD_WL_TYPED_MODULE_CURSOR_DESC="Should the cursor be hidden."
-MOD_WL_TYPED_MODULE_PLACEHOLDER="Please enter at least 2 keywords"
+MOD_WL_TYPED_MODULE_PLACEHOLDER="Please pay attention to the correct spelling of the keywords"
 
 MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Please define at least 2 keywords</p>"
