--- a/language/de-DE/de-DE.mod_wl_typed_module.ini
+++ b/language/de-DE/de-DE.mod_wl_typed_module.ini
@@ -29,12 +29,18 @@ MOD_WL_TYPED_MODULE_TIMESTART_LABEL="Zeit bevor die Eingabe beginnt"
 MOD_WL_TYPED_MODULE_TIMESTART_DESC="Bitte legen Sie eine Zeit fest."
 MOD_WL_TYPED_MODULE_TIMEBACK_LABEL="Geschwindigkeit beim Rücklauf"
 MOD_WL_TYPED_MODULE_TIMEBACK_DESC="Bitte legen Sie die Geschwindingkeit fest."
+MOD_WL_TYPED_MODULE_BACKSPEED_LABEL="Geschwindingkeit der Animation zum löschen"
+MOD_WL_TYPED_MODULE_BACKSPEED_DESC="Bitte legen Sie die Geschwindingkeit fest."
 MOD_WL_TYPED_MODULE_LOOP_LABEL="Ausgabe wiederholen"
 MOD_WL_TYPED_MODULE_LOOP_DESC="Aktivieren Sie die Checkbox für eine Wiederholung."
 MOD_WL_TYPED_MODULE_LOOPCOUNT_LABEL="Anzahl der Wiederholungen"
 MOD_WL_TYPED_MODULE_LOOPCOUNT_DESC="Bitte legen Sie die Anzahl der Wiederholungen fest."
-MOD_WL_TYPED_MODULE_CURSOR_LABEL="Cursor ausblenden"
-MOD_WL_TYPED_MODULE_CURSOR_DESC="Soll der Cursor ausgeblendet werden."
+MOD_WL_TYPED_MODULE_CURSOR_LABEL="Cursor einblenden"
+MOD_WL_TYPED_MODULE_CURSOR_DESC="Soll der Cursor eingeblendet werden werden."
 MOD_WL_TYPED_MODULE_PLACEHOLDER="Bitte achten Sie auf die richtige Schreibweise der Schlagwörter."
+MOD_WL_TYPED_MODULE_BACKGROUNDCOLOR_LABEL="Hintergundfarbe wählen"
+MOD_WL_TYPED_MODULE_BACKGROUNDCOLOR_DESC="Bitte wählen Sie eine Hintergrundfarbe"
+MOD_WL_TYPED_MODULE_ENDTEXT_LABEL="Abschlusstext"
+MOD_WL_TYPED_MODULE_ENDTEXT_DESC="Bitte geben sie etwas Text ein."
 
 MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Bitte auf die richtige Schreibweise achten ( 'Videomaker','Desinger','Coder' )</p>"
