--- a/language/en-GB/en-GB.mod_wl_typed_module.ini
+++ b/language/en-GB/en-GB.mod_wl_typed_module.ini
@@ -27,14 +27,20 @@ MOD_WL_TYPED_MODULE_FONTSPEED_LABEL="Speed"
 MOD_WL_TYPED_MODULE_FONTSPEED_DESC="Please set the speed."
 MOD_WL_TYPED_MODULE_TIMESTART_LABEL="Time before the entry begins."
 MOD_WL_TYPED_MODULE_TIMESTART_DESC="Please set a time."
-MOD_WL_TYPED_MODULE_TIMEBACK_LABEL="Speed ​​at the return"
+MOD_WL_TYPED_MODULE_TIMEBACK_LABEL="Speed at the return"
 MOD_WL_TYPED_MODULE_TIMEBACK_DESC="Please set the speed."
+MOD_WL_TYPED_MODULE_BACKSPEED_LABEL="Speed of the animation to delete"
+MOD_WL_TYPED_MODULE_BACKSPEED_DESC="Please set the speed."
 MOD_WL_TYPED_MODULE_LOOP_LABEL="Repeat"
 MOD_WL_TYPED_MODULE_LOOP_DESC="Activate the checkbox for a repeat."
 MOD_WL_TYPED_MODULE_LOOPCOUNT_LABEL="Number of repetitions"
 MOD_WL_TYPED_MODULE_LOOPCOUNT_DESC="Please specify the number of repetitions."
-MOD_WL_TYPED_MODULE_CURSOR_LABEL="Hide the cursor"
-MOD_WL_TYPED_MODULE_CURSOR_DESC="Should the cursor be hidden."
+MOD_WL_TYPED_MODULE_CURSOR_LABEL="Show cursor"
+MOD_WL_TYPED_MODULE_CURSOR_DESC="the cursor should be displayed."
 MOD_WL_TYPED_MODULE_PLACEHOLDER="Please pay attention to the correct spelling of the keywords"
+MOD_WL_TYPED_MODULE_BACKGROUNDCOLOR_LABEL="Select backgroundcolor"
+MOD_WL_TYPED_MODULE_BACKGROUNDCOLOR_DESC="Please select your backgroundcolor."
+MOD_WL_TYPED_MODULE_ENDTEXT_LABEL="Endtext"
+MOD_WL_TYPED_MODULE_ENDTEXT_DESC="Please enter some text."
 
 MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Please define at least 2 keywords</p>"
