--- a/language/de-DE/de-DE.mod_wl_typed_module.ini
+++ b/language/de-DE/de-DE.mod_wl_typed_module.ini
@@ -43,4 +43,4 @@ MOD_WL_TYPED_MODULE_BACKGROUNDCOLOR_DESC="Bitte wählen Sie eine Hintergrundfarb
 MOD_WL_TYPED_MODULE_ENDTEXT_LABEL="Abschlusstext"
 MOD_WL_TYPED_MODULE_ENDTEXT_DESC="Bitte geben sie etwas Text ein."
 
-MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Bitte auf die richtige Schreibweise achten ( 'Videomaker','Desinger','Coder' )</p>"
+MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Schlagwörter festlegen</p>"
