--- a/language/en-GB/en-GB.mod_wl_typed_module.ini
+++ b/language/en-GB/en-GB.mod_wl_typed_module.ini
@@ -43,4 +43,4 @@ MOD_WL_TYPED_MODULE_BACKGROUNDCOLOR_DESC="Please select your backgroundcolor."
 MOD_WL_TYPED_MODULE_ENDTEXT_LABEL="Endtext"
 MOD_WL_TYPED_MODULE_ENDTEXT_DESC="Please enter some text."
 
-MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Please define at least 2 keywords</p>"
+MOD_WL_TYPED_MODULE_MSGWORDS="<hr style='margin-top: 60px'><p class='alert alert-warning' style='margin-bottom: -10px'><span class='icon-location'></span>Set Keywords</p>"
